--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
+    "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.19",
     "input-otp": "^1.2.4",
