--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@supabase/supabase-js": "^2.45.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dayjs": "^1.11.12",
@@ -42,12 +43,15 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^11.3.19",
     "input-otp": "^1.2.4",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.25.1",
+    "react-to-print": "^2.15.1",
     "recharts": "^2.12.7",
     "rrule": "^2.8.1",
     "tailwind-merge": "^2.4.0",
