--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-push-notification": "^1.5.4",
     "react-router-dom": "^6.25.1",
     "react-to-print": "^2.15.1",
     "recharts": "^2.12.7",
