--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-calendar-heatmap": "^1.9.0",
     "react-datepicker": "^7.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
