--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^11.3.19",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.2",
     "input-otp": "^1.2.4",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
