--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.2",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.25.1",
     "react-to-print": "^2.15.1",
     "recharts": "^2.12.7",
